WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155620
Speculative revalidation requests do not have their HTTP user-agent set
https://bugs.webkit.org/show_bug.cgi?id=155620
Summary
Speculative revalidation requests do not have their HTTP user-agent set
Chris Dumez
Reported
2016-03-17 20:05:45 PDT
Speculative revalidation requests do not have their HTTP user-agent set.
Attachments
Patch
(15.30 KB, patch)
2016-03-18 12:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-03-17 20:06:03 PDT
rdar://problem/24657567
Chris Dumez
Comment 2
2016-03-17 20:14:07 PDT
We can probably save the original request's user-agent header in the cache and then re-use that one for speculative validation. We may also need to make sure the user-agent header used by the speculative validation matches the effective user-agent of the actual request from WebCore.
Chris Dumez
Comment 3
2016-03-18 12:07:25 PDT
Created
attachment 274443
[details]
Patch
WebKit Commit Bot
Comment 4
2016-03-18 16:23:13 PDT
Comment on
attachment 274443
[details]
Patch Clearing flags on attachment: 274443 Committed
r198450
: <
http://trac.webkit.org/changeset/198450
>
WebKit Commit Bot
Comment 5
2016-03-18 16:23:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug