Speculative revalidation requests do not have their HTTP user-agent set https://bugs.webkit.org/show_bug.cgi?id=155620 <rdar://problem/24657567>

Reviewed by Brady Eidson.

Source/WebCore:

Export a couple of symbols so they can be used from WebKit2.

Test: http/tests/cache/disk-cache/speculative-validation/validation-request.html

* platform/network/ResourceRequestBase.h:

Source/WebKit2:

Speculative revalidation requests do not have their HTTP user-agent set
which could lead to different content getting returned by the server.

To address the problem, we save the original request's 'user-agent' in
the disk cache and re-use it later on for speculative validation
requests.

* NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:
(WebKit::NetworkCache::constructRevalidationRequest):
(WebKit::NetworkCache::SpeculativeLoadManager::revalidateEntry):
(WebKit::NetworkCache::SpeculativeLoadManager::preloadEntry):
* NetworkProcess/cache/NetworkCacheSubresourcesEntry.cpp:
(WebKit::NetworkCache::SubresourceInfo::encode):
(WebKit::NetworkCache::SubresourceInfo::decode):
(WebKit::NetworkCache::SubresourceInfo::SubresourceInfo):
(WebKit::NetworkCache::SubresourceInfo::operator=):
(WebKit::NetworkCache::SubresourcesEntry::SubresourcesEntry):
(WebKit::NetworkCache::SubresourcesEntry::updateSubresourceLoads):
(WebKit::NetworkCache::SubresourcesEntry::decodeStorageRecord): Deleted.
* NetworkProcess/cache/NetworkCacheSubresourcesEntry.h:
(WebKit::NetworkCache::SubresourceInfo::SubresourceInfo):

LayoutTests:

Add layout test coverage.

* http/tests/cache/disk-cache/speculative-validation/resources/request-headers-script.php: Added.
* http/tests/cache/disk-cache/speculative-validation/resources/validation-request-frame.php: Added.
* http/tests/cache/disk-cache/speculative-validation/validation-request-expected.txt: Added.
* http/tests/cache/disk-cache/speculative-validation/validation-request.html: Added.


Canonical link: https://commits.webkit.org/173778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198450 268f45cc-cd09-0410-ab3c-d52691b4dbfc