Source/WebKit2/NetworkProcess/cache/NetworkCacheSubresourcesEntry.cpp
@@ -40,6 +40,7 @@ void SubresourceInfo::encode(Encoder& encoder) const
 {
     encoder << firstPartyForCookies;
     encoder << isTransient;
+    encoder << httpUserAgent;
 }
 
 bool SubresourceInfo::decode(Decoder& decoder, SubresourceInfo& info)
@@ -48,7 +49,24 @@ bool SubresourceInfo::decode(Decoder& decoder, SubresourceInfo& info)
         return false;
     if (!decoder.decode(info.isTransient))
         return false;
+    if (!decoder.decode(info.httpUserAgent))
+        return false;
     return true;
+}
+
+SubresourceInfo::SubresourceInfo(const SubresourceInfo& subresourceInfo)
+    : firstPartyForCookies(subresourceInfo.firstPartyForCookies.isolatedCopy())
+    , httpUserAgent(subresourceInfo.httpUserAgent.isolatedCopy())
+    , isTransient(subresourceInfo.isTransient)
+{
+}
+
+SubresourceInfo& SubresourceInfo::operator=(const SubresourceInfo& other)
+{
+    firstPartyForCookies = other.firstPartyForCookies.isolatedCopy();
+    httpUserAgent = other.httpUserAgent.isolatedCopy();
+    isTransient = other.isTransient;
+    return *this;
 }
 
 Storage::Record SubresourcesEntry::encodeAsStorageRecord() const
@@ -90,7 +108,7 @@ SubresourcesEntry::SubresourcesEntry(Key&& key, const Vector<std::unique_ptr<Sub
 {
     ASSERT(m_key.type() == "subresources");
     for (auto& subresourceLoad : subresourceLoads)
-        m_subresources.add(subresourceLoad->key, SubresourceInfo(subresourceLoad->request.firstPartyForCookies()));
+        m_subresources.add(subresourceLoad->key, SubresourceInfo(subresourceLoad->request));
 }
 
 void SubresourcesEntry::updateSubresourceLoads(const Vector<std::unique_ptr<SubresourceLoad>>& subresourceLoads)
@@ -100,7 +118,7 @@ void SubresourcesEntry::updateSubresourceLoads(const Vector<std::unique_ptr<Subr
     // Mark keys that are common with last load as non-Transient.
     for (auto& subresourceLoad : subresourceLoads) {
         bool isTransient = !oldSubresources.contains(subresourceLoad->key);
-        m_subresources.add(subresourceLoad->key, SubresourceInfo(subresourceLoad->request.firstPartyForCookies(), isTransient));
+        m_subresources.add(subresourceLoad->key, SubresourceInfo(subresourceLoad->request, isTransient));
     }
 }
 
