LayoutTests/http/tests/cache/disk-cache/speculative-validation/resources/validation-request-frame.php
@@ -1,0 +1,10 @@
+<?php
+header('Content-Type: text/html');
+header('Cache-Control: max-age=0');
+header('Etag: 123456789');
+
+?>
+<!DOCTYPE html>
+<body>
+<script src="request-headers-script.php"></script>
+</body>
